K8s/Kustomize/base/sockshop/orders/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  # annotations:
  #   prometheus.io/scrape: 'true'
  labels:
    name: orders
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    name: orders
